tests/cases/should_fail/literals/dangling_parenthesis.stderr
error: unexpectedly reached the end of input
 --> $DIR/dangling_parenthesis.hash:3:17
2 |   
3 |   k := (a) + ((b)));
  |                   ^ here
  = help: consider adding a `;`
